--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
 	<title>my blog</title>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/ionicons.min.css">
+	<link rel="stylesheet" href="css/main.css" type="text/css">
+	<link rel="stylesheet" href="css/queries.css">
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="css/main.css">
+
 </head>
 
 <body>
