--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>my blog</title>
-	
+
 	<link rel="stylesheet" href="css/ionicons.min.css">
 	<link rel="stylesheet" href="css/main.css" type="text/css">
 	<link rel="stylesheet" href="css/queries.css">
@@ -44,7 +44,7 @@
 				<h4>phone</h4>
 				<p>0402157442</p>
 				<h4>find me on</h4>
-				<div class="icon"><i class="ion-social-facebook fac"></i> <i class="ion-social-instagram insta"></i> <i class="ion-social-twitter twi"></i></div>
+				<div class="icon"><a href="https://www.facebook.com/jibril.s.osman" class="fa"><i class="ion-social-facebook fac"></i> </a><i class="ion-social-instagram insta"></i> <i class="ion-social-twitter twi"></i></div>
 
 			</div>
 		</div>
