--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<main>
 		<div class="row">
 			<div class="blue">
-				<H3 style="color: white">J4JESUS</H3>
+				<H3 style="color: white;
+				position: absolute; top: 20px;">J4JESUS</H3>
 			</div>
 			<div class="white"></div>
 		</div>
@@ -29,11 +30,14 @@
 
 		<section class="con">
 
-			<h1>JIBRIL SALIM <br><span>OSMAN</span></h1>
+			<h1>JIBRIL SALIM </h1>
+			<span>
+				<h1>OSMAN</h1>
+			</span>
 
 			<p class="titl">FRONT END DEVELOPER</p>
 			<P class="intro">I’m an aspiring web designer who loves everything about the web.I’d like to work for a web design firm helping clients create an impressive online presence.</P>
-			<button class="btn">portfolia</button>
+			<button class="btn">portfolio</button>
 
 
 		</section>
@@ -42,9 +46,10 @@
 				<h4>email</h4>
 				<p>webxite@yahoo.com</p>
 				<h4>phone</h4>
-				<p>0402157442</p>
+				<p id="phone">0402157442</p>
 				<h4>find me on</h4>
-				<div class="icon"><a href="https://www.facebook.com/jibril.s.osman" class="fa"><i class="ion-social-facebook fac"></i> </a><i class="ion-social-instagram insta"></i> <i class="ion-social-twitter twi"></i></div>
+				<div class="icon"><a href="https://www.facebook.com/jibril.s.osman"><i class="ion-social-facebook fac"></i> </a>
+					<a href="https://www.instagram.com/" class="insta"><i class="ion-social-instagram insta"></i> </a><a href="https://twitter.com/?lang=en" class="insta"><i class="ion-social-twitter twi"></i></a></div>
 
 			</div>
 		</div>
