--- a/index.html
+++ b/index.html
@@ -1,65 +1,74 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-	<title>my blog</title>
+	<meta charset="UTF-8">
+	<title>Document</title>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/grid.css">
 	<link rel="stylesheet" href="css/ionicons.min.css">
 	<link rel="stylesheet" href="css/main.css" type="text/css">
 	<link rel="stylesheet" href="css/queries.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css" integrity="sha256-a2tobsqlbgLsWs7ZVUGgP5IvWZsx8bTNQpzsqCSm5mk=" crossorigin="anonymous">
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
-
 </head>
 
 <body>
 
-	<header></header>
-	<main>
-		<div class="row">
-			<div class="blue">
-				<H3 style="color: white;
-				position: absolute; top: 20px;">J4JESUS</H3>
-			</div>
-			<div class="white"></div>
-		</div>
-		<div class="tr">
-			<div class="image"><img src="osnur.JPEG" alt="" class="img">
-			</div>
-		</div>
+	<nav>
+		<div id="particles-js">
 
-
-		<section class="con">
-
-			<h1>JIBRIL SALIM </h1>
-			<span>
-				<h1>OSMAN</h1>
-			</span>
-
-			<p class="titl">FRONT END DEVELOPER</p>
-			<P class="intro">I’m an aspiring web designer who loves everything about the web.I’d like to work for a web design firm helping clients create an impressive online presence.</P>
-			<button class="btn">portfolio</button>
-
-
-		</section>
-		<div class="contact">
-			<div class="contacti">
-				<h4>email</h4>
-				<p>webxite@yahoo.com</p>
-				<h4>phone</h4>
-				<p id="phone">0402157442</p>
-				<h4>find me on</h4>
-				<div class="icon"><a href="https://www.facebook.com/jibril.s.osman"><i class="ion-social-facebook fac"></i> </a>
-					<a href="https://www.instagram.com/" class="insta"><i class="ion-social-instagram insta"></i> </a><a href="https://twitter.com/?lang=en" class="insta"><i class="ion-social-twitter twi"></i></a></div>
-
+			<div class="row">
+				<div class="toggle">
+					<i class="ion-navicon-round icon menu"></i>
+				</div>
+				<ul class="animated jello">
+					<li class="home"><a href="#">Home</a></li>
+					<li><a href="#"> About </a></li>
+					<li><a href="#">Products</a></li>
+				</ul>
 			</div>
 		</div>
-	</main>
-	<footer>
-		<div class="fot">
-			<h3>copyright&copy; 2019.JIBRIL</h3>
-		</div>
-	</footer>
+	</nav>
+	<p><a href="#">Products</a></p>
+	<div id="particles-js">
+		<main>
 
+
+			<div class="con">
+				<div class="row ">
+					<div class="dv">
+						<div class="col span-1-of-3 box1">
+							<p class="animated jello">hello love</p>
+						</div>
+					</div>
+					<div class="col span-2-of-3 box2 "></div>
+
+				</div>
+			</div>
+		</main>
+	</div>
+
+
+
+	<!---particle file--->
+	<script type="text/javascript" src="js/particles.min.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
+	<!---particle file--->
+
+	<!---ccollapsenavbar file--->
+	<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$('.menu').click(function() {
+				$('ul').toggleClass('active');
+			})
+		})
+
+	</script>
+	<!---ccollapsenavbar file--->
 </body>
 
 </html>
